Delete func for images
