# images/swagger.yaml
@@ -1,129 +1,126 @@
 swagger: "2.0"
 info:
   title: Images API
-  description: API for uploading and retrieving image files.
+  description: Documentation for Images API
   version: "1.0.0"
-host: localhost:8080
+host: localhost
 basePath: /
 schemes:
   - http
 consumes:
-  - application/json
   - multipart/form-data
-  - image/png
-  - image/jpeg
-  - image/jpg
 produces:
   - application/json
   - image/png
   - image/jpeg
-  - image/jpg
 paths:
   /images/covers/{id}:
     post:
-      summary: Upload a book cover
-      description: Uploads a book cover image for a specific book ID.
+      summary: Upload a book cover image
       tags:
-        - books
+        - users
       parameters:
         - name: id
           in: path
+          description: ID of the book cover
           required: true
           type: string
-          description: Book ID
         - name: upload
           in: formData
+          description: Image file to upload
           required: true
           type: file
-          description: Book cover image file
       responses:
-        200:
-          description: Successful upload
-          schema:
-            type: object
-            additionalProperties: true
-        400:
+        "201":
+          description: Successfully uploaded
+        "400":
           description: Invalid file type
-          schema:
-            type: string
-        500:
-          description: Server error
-          schema:
-            type: object
+        "500":
+          description: Upload failed
     get:
-      summary: Get a book cover
-      description: Retrieves a book cover image for a specific book ID.
+      summary: Get a book cover image
       tags:
-        - books
+        - users
       parameters:
         - name: id
           in: path
+          description: ID of the book cover
           required: true
           type: string
-          description: Book ID
       responses:
-        200:
-          description: Book cover image retrieved successfully
-          schema:
-            type: file
-        404:
+        "200":
+          description: Image file
+        "404":
           description: File not found
-          schema:
-            type: string
-
+    delete:
+      summary: Delete a book cover image
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          description: ID of the book cover
+          required: true
+          type: string
+      responses:
+        "200":
+          description: File deleted
+        "404":
+          description: File not found
+        "500":
+          description: Unable to delete file
   /images/avatars/{id}:
     post:
-      summary: Upload a user avatar
-      description: Uploads a user avatar image for a specific user ID.
+      summary: Upload a user avatar image
       tags:
         - users
       parameters:
         - name: id
           in: path
+          description: ID of the user avatar
           required: true
           type: string
-          description: User ID
         - name: upload
           in: formData
+          description: Image file to upload
           required: true
           type: file
-          description: User avatar image file
       responses:
-        201:
-          description: Avatar uploaded successfully
-          schema:
-            $ref: '#/definitions/imagesNoContent'
-        400:
+        "201":
+          description: Successfully uploaded
+        "400":
           description: Invalid file type
-          schema:
-            $ref: '#/definitions/imagesNoContent'
-        500:
-          description: Server error
-          schema:
-            $ref: '#/definitions/imagesNoContent'
+        "500":
+          description: Upload failed
     get:
-      summary: Get a user avatar
-      description: Retrieves a user avatar image for a specific user ID.
+      summary: Get a user avatar image
       tags:
         - users
       parameters:
         - name: id
           in: path
+          description: ID of the user avatar
           required: true
           type: string
-          description: User ID
       responses:
-        200:
-          description: User avatar image retrieved successfully
-          schema:
-            type: file
-        404:
+        "200":
+          description: Image file
+        "404":
           description: File not found
-          schema:
-            $ref: '#/definitions/imagesNoContent'
-
-definitions:
-  imagesNoContent:
-    description: Response for no content scenarios.
-    type: object
-    additionalProperties: false
+    delete:
+      summary: Delete a user avatar image
+      tags:
+        - users
+      parameters:
+        - name: id
+          in: path
+          description: ID of the user avatar
+          required: true
+          type: string
+      responses:
+        "200":
+          description: File deleted
+        "404":
+          description: File not found
+        "500":
+          description: Unable to delete file
